CICD/k8s/front-deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment-blue
  labels:
    app: frontend
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
        version: blue
    spec:
      imagePullSecrets:
        - name: dockerhub-cred-front
      containers:
        - name: frontend-container
          image: saralove20/stockit-front:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          # 1. ConfigMap 마운트 (Nginx 설정 주입)
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

          # 2. 프로브 설정
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSecond: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSecond: 5
            failureThreshold: 3
      volumes:
        - name: nginx-config
          configMap:
            name: front-config
            items:
              - key: default.conf
                path: default.conf
