CICD/k8s/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: frontend
    version: blue
spec:
  type: LoadBalancer
  selector:
    app: frontend
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
