CICD/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockit-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.stockit.kro.kr
      secretName: stockit-tls
  rules:
    - host: www.stockit.kro.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: stockit-be
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: stockit-be
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
